--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
@@ -140,6 +140,7 @@
                                                 <th>Cliente</th>
                                                 <th>Importe</th>
                                                 <th>Forma Pago</th>
+                                                <th>Accion</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -158,7 +159,17 @@
                                                                 <td>@item.Nombre</td>
                                                                 <td>@x.MontoAbono</td>
                                                                 <td>@x.FormaPago</td>
-                                                                
+                                                                <th>
+                                                                    
+                                                                    <a ID="lbPDF" href="@x.URLPdf" class="tip" target="_blank" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                        <i class="material-icons">picture_as_pdf</i>
+                                                                        <span>PDF</span>
+                                                                    </a>
+                                                                    <a ID="lbXML" href="@x.URLXml" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                        <i class="material-icons">file_download</i>
+                                                                        <span>XML</span>
+                                                                    </a>
+                                                                </th>
                                                             </tr>
                                                         }
                                                     }
