--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewBag.Title = "Inicio -";
 }
-
+@using MVC.Presentacion.Models.Seguridad
+@{
+    MenuDto rol = Session["Roles"] as MenuDto;
+}
 <script>
     window.onload = function() {
         var ctx = document.getElementById('myChart').getContext('2d');
@@ -33,6 +36,8 @@
                 </div>
             </div>
         </div>
+        @if (rol.Ventas)
+        {
         <div class="row clearfix">
             <div class="col-lg-3 col-md-6">
                 <div class="card text-center">
@@ -75,6 +80,7 @@
                 </div>
             </div>
         </div>
+        }
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
@@ -87,6 +93,8 @@
                 </div>
             </div>
         </div>
+        @if (rol.Ventas)
+        {
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
@@ -99,6 +107,9 @@
                 </div>
             </div>
         </div>
+        }
+        @if (rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen)
+        {
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
@@ -109,6 +120,8 @@
             </div>
         </div>
         <div class="row clearfix">
+            if (rol.CatProducto)
+            {
             <div class="col-lg-4 col-md-6">
                 <div class="card text-center">
                     <div class="body">
@@ -119,6 +132,9 @@
                     </div>
                 </div>
             </div>
+            }
+            if (rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen)
+            {
             <div class="col-lg-4 col-md-6">
                 <div class="card text-center">
                     <div class="body">
@@ -129,6 +145,9 @@
                     </div>
                 </div>
             </div>
+            }
+            if (rol.Almacen)
+            {
             <div class="col-lg-4 col-md-6">
                 <div class="card text-center">
                     <div class="body">
@@ -140,7 +159,11 @@
                     </div>
                 </div>
             </div>
+            }
         </div>
+        }
+        @if (rol.CatPuntosVenta)
+        {
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12">
                 <div class="card text-center">
@@ -183,6 +206,9 @@
                 </div>
             </div>
         </div>
+        }
+        @if (rol.CCRecuperado)
+        {
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12">
                 <div class="card text-center">
@@ -229,6 +255,9 @@
                 </div>
             </div>
         </div>
+        }
+        @if (rol.CCVencida)
+        {
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12">
                 <div class="card text-center">
@@ -271,6 +300,9 @@
                 </div>
             </div>
         </div>
+        }
+        @if (rol.CatClientes)
+        {
         <div class="row clearfix">
             <div class="col-lg-6 col-md-6">
                 <div class="card text-center">
@@ -347,6 +379,9 @@
                 </div>
             </div>
         </div>
+        }
+        @if (rol.Ventas)
+        {
         <div class="row clearfix">
             <div class="col-lg-3 col-md-6">
                 <div class="card text-center">
@@ -390,5 +425,6 @@
                 </div>
             </div>
         </div>
+        }
     </div>
 </section>
