--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
@@ -159,13 +159,16 @@
                                                                 <td>@item.Nombre</td>
                                                                 <td>@x.MontoAbono</td>
                                                                 <td>@x.FormaPago</td>
-                                                                <th>
-                                                                    
-                                                                    <a ID="lbPDF" href="@x.URLPdf" class="tip" target="_blank" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                <th>     
+                                                                    <a href="@Url.Action("FacturarAbono", "Cobranza", new { id = x.IdAbono })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                        <i class="material-icons">local_atm</i>
+                                                                        <span>Facturar</span>
+                                                                    </a>                                                               
+                                                                    <a ID="lbPDF" href="@item.URL_CFDI" class="tip" target="_blank" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">picture_as_pdf</i>
                                                                         <span>PDF</span>
                                                                     </a>
-                                                                    <a ID="lbXML" href="@x.URLXml" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <a ID="lbXML" href="@item.URL_XML" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">file_download</i>
                                                                         <span>XML</span>
                                                                     </a>
