--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -91,22 +91,12 @@
                         </div>
                         <div class="body m-b-10">
                             <div class="row clearfix">
-                                <div class="col-md-1">
-                                    <label style="transform: rotate(270deg); margin-top:120px;">Kilos</label> 
-                                </div>
-                                <div class="col-md-11">
-                                    <canvas id="myChart" style="width: 100%; height: 250px"></canvas>
-                                </div>                                
-                            </div>
-                            <div class="row clearfix align-items-center justify-content-center">
-                                <p>Días</p>
+                                <canvas id="myChart" style="width: 100%; height: 250px"></canvas>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
-
         }
         @if (rol.Ventas)
         {
@@ -126,7 +116,7 @@
         @if (rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen)
         {
             <div class="header">
-                <p><strong>Anden:</strong> Información general del mes <strong> @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(DateTime.Now.ToString("MMMM"))</strong></p>
+                <p><strong>Andén:</strong> Información general del mes <strong> @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(DateTime.Now.ToString("MMMM"))</strong></p>
             </div>
             <div class="row clearfix">
                 @if (rol.CatProducto || rol.Almacen)
@@ -161,10 +151,10 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="card text-center">
                             <div class="body">
-                                <span>Nivel de almacen principal</span>
+                                <span>Nivel de almacén principal (%)</span>
                                 <input type="text" class="knob" value="@ViewBag.Anden.NivelAlmacen" data-skin="tron" readonly data-width="125" data-height="125" data-thickness="0.25" data-angleArc="250" data-angleoffset="-125" data-fgColor="#ff598f">
                                 <div>
-                                    <small class="text-muted">@ViewBag.Anden.KilosAlmacen</small>
+                                    <small class="text-muted">@ViewBag.Anden.KilosAlmacen kg.</small>
                                 </div>
                             </div>
                         </div>
@@ -181,10 +171,10 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <address>
-                                        <strong>Ultimas 5 ventas</strong>
+                                        <strong>Últimas 5 ventas</strong>
                                         <br><strong>Nota importante:</strong>
-                                        <br>Las ventas aqui presentadas
-                                        <br>podrian no ser las ultimas en tiempo real.
+                                        <br>Las ventas, son mostradas conforme 
+                                        <br>se sincroniza la información de los puntos de venta.
                                     </address>
                                 </div>
                             </div>
@@ -192,9 +182,9 @@
                                 <table class="table m-b-0 table-hover">
                                     <thead>
                                         <tr>
-                                            <th>Pto Venta</th>
-                                            <th>Kilos</th>
-                                            <th>Total</th>
+                                            <th>Punto Venta</th>
+                                            <th>Kilogramos</th>
+                                            <th>Total ($)</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -240,8 +230,8 @@
                                             <th>Ticket</th>
                                             <th>Fecha abono</th>
                                             <th>Cliente</th>
-                                            <th>Importe</th>
-                                            <th>forma de pago</th>
+                                            <th>Importe ($)</th>
+                                            <th>Forma de pago</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -289,7 +279,7 @@
                                             <th>Ticket</th>
                                             <th>Cliente</th>
                                             <th>Importe</th>
-                                            <th>Dias de Adeudo</th>
+                                            <th>Días de adeudo</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -302,7 +292,7 @@
                                                     <th>@item.Ticket</th>
                                                     <th>@item.Cliente
                                                     <th>@item.SaldoInsoluto</th>
-                                                    <th>@item.Dias1a7</th>
+                                                    <th>@Convert.ToInt32(item.Dias1a7)</th>
                                                 </tr>
                                             }
                                         }
@@ -323,7 +313,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <address>
-                                        <strong>Top 5 Deudores mas longevos</strong>
+                                        <strong>Top 5: Antigüedad de saldos</strong>
                                     </address>
                                 </div>
                             </div>
@@ -332,7 +322,7 @@
                                     <thead>
                                         <tr>
                                             <th>Cliente</th>
-                                            <th>Deuda</th>
+                                            <th>Monto ($)</th>
                                             <th>Dias de vencido</th>
                                         </tr>
                                     </thead>
@@ -344,7 +334,7 @@
                                                 <tr>
                                                     <th>@item.Cliente</th>
                                                     <th>@item.SaldoInsoluto</th>
-                                                    <th>@item.Dias1a7</th>
+                                                    <th>@Convert.ToInt32(item.Dias1a7)</th>
                                                 </tr>
                                             }
                                         }
@@ -369,7 +359,7 @@
                                     <thead>
                                         <tr>
                                             <th>Cliente</th>
-                                            <th>Deuda</th>
+                                            <th>Monto ($)</th>
                                             <th>Dias de vencido</th>
                                         </tr>
                                     </thead>
@@ -381,7 +371,7 @@
                                                 <tr>
                                                     <th>@item.Cliente</th>
                                                     <th>@item.SaldoInsoluto</th>
-                                                    <th>@item.Dias1a7</th>
+                                                    <th>@Convert.ToInt32(item.Dias1a7)</th>
                                                 </tr>
                                             }
                                         }
@@ -403,8 +393,8 @@
                     <div class="card text-center">
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-amber">battery_full</i></p>
-                            <span>Ventas de Camionetas</span>
-                            <h3 class="m-b-10"><span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalCamionetas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalCamionetas</span></h3>
+                            <span>Venta de Camionetas</span>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalCamionetas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalCamionetas</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
                     </div>
@@ -413,8 +403,8 @@
                     <div class="card text-center">
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-blue">local_shipping</i></p>
-                            <span>Ventas de Pipas</span>
-                            <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.Caja.TotalPipas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalPipas</h3>
+                            <span>Venta de Pipas</span>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalPipas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalPipas</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
                     </div>
@@ -423,8 +413,8 @@
                     <div class="card text-center">
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-red">local_gas_station</i></p>
-                            <span>Ventas de Estaciones</span>
-                            <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.Caja.TotalEstaciones" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalEstaciones</h3>
+                            <span>Venta de Estaciones</span>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalEstaciones" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalEstaciones</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
 
@@ -434,8 +424,8 @@
                     <div class="card text-center">
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-green">functions</i></p>
-                            <span>Total de venta</span>
-                            <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.Caja.TotalVetna" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalVetna</h3>
+                            <span>Total de ventas</span>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalVetna" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalVetna</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
                     </div>
