--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
@@ -118,7 +118,7 @@
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
                                             @*<input type="text" name="TipoLocacion" class="form-control" placeholder="Sucursal/Oficina/Tienda/Vacío/etc." value="@((ViewBag.Locaciones!=null)? @ViewBag.Locaciones.TipoLocacion:" ")">*@
-                                            @Html.TextBoxFor(m => m.cliente.Locacion.TipoLocacion, new { @class = "form-control" })
+                                            @Html.TextBoxFor(m => m.cliente.Locacion.TipoLocacion, new { @class = "form-control", @placeholder = "Sucursal/Oficina/Tienda/Vacío/etc" })
                                         </div>
                                         @Html.ValidationMessageFor(m => m.cliente.Locacion.TipoLocacion, "", new { @class = "text-danger" })
                                     </div>
