AMN- Puntoventa Adapter, Descuento

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
@@ -51,7 +51,7 @@
                 android:layout_marginStart="5sp" />
 
 
-            <!--<EditText
+            <EditText
                 android:id="@+id/ETPuntoVentaGasListActivityPrecioporLitro"
                 android:layout_width="wrap_content"
                 android:layout_height="68dp"
@@ -63,21 +63,21 @@
                 app:layout_row="3"
                 tools:ignore="Autofill,LabelFor"
                 tools:targetApi="P"
-
+                android:hint="13.66"
                 />
 
-            <TextView-->
-                <!--android:id="@+id/PuntoVentaGasListActivityTituloPrecioporLitro"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="Precio por Litro"-->
-                <!--android:textAlignment="center"-->
-                <!--android:textSize="14sp"-->
-                <!--app:layout_column="2"-->
-                <!--app:layout_gravity="fill"-->
-                <!--app:layout_row="3"-->
-                <!--android:layout_marginBottom="20dp"-->
-                <!--/>-->
+            <TextView
+                android:id="@+id/PuntoVentaGasListActivityTituloPrecioporLitro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Precio por Litro"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                app:layout_column="2"
+                app:layout_gravity="fill"
+                app:layout_row="3"
+                android:layout_marginBottom="20dp"
+                />
 
 
 
