--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
@@ -19,7 +19,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card text-center">
                     <div class="body">
-                        <h1>Ups.. Algo ha salido mal!!</h1>
+                        <h1>¡Algo ha salido mal!</h1>
                         <h5>La página que estás buscando no se encuentra</h5>
                     </div>
                 </div>
