--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -96,12 +96,13 @@
                         }
                         if (rol.CompraOrdenCompra)
                         {
-                            <li>
+                            <li class="menu_dark"><a href="@Url.Action("Ordenes", "OrdenCompra")"><i class="material-icons">shopping_cart </i><span class="icon-name">Compras</span> </a></li>
+                            @*<li>
                                 <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                                 <ul class="ml-menu">
                                     <li><a href="@Url.Action("Ordenes", "OrdenCompra")">Orden de Compra </a></li>
                                 </ul>
-                            </li>
+                            </li>*@
                         }
                         if (rol.Ventas)
                         {
